src/test/ui/deprecated-safe/deprecated-safe-trait-impl.mir.stderr
error[E0198]: negative impls cannot be unsafe
  --> $DIR/deprecated-safe-trait-impl.rs:22:13
   |
LL | unsafe impl !DeprSafe for D {}
   | ------      -^^^^^^^^
   | |           |
   | |           negative because of this
   | unsafe because of this

error[E0198]: negative impls cannot be unsafe
  --> $DIR/deprecated-safe-trait-impl.rs:34:13
   |
LL | unsafe impl !DeprSafeFuture for H {}
   | ------      -^^^^^^^^^^^^^^
   | |           |
   | |           negative because of this
   | unsafe because of this

error[E0198]: negative impls cannot be unsafe
  --> $DIR/deprecated-safe-trait-impl.rs:46:13
   |
LL | unsafe impl !DeprSafe2015 for L {}
   | ------      -^^^^^^^^^^^^
   | |           |
   | |           negative because of this
   | unsafe because of this

error[E0198]: negative impls cannot be unsafe
  --> $DIR/deprecated-safe-trait-impl.rs:61:13
   |
LL | unsafe impl !DeprSafe2015Future for Q {}
   | ------      -^^^^^^^^^^^^^^^^^^
   | |           |
   | |           negative because of this
   | unsafe because of this

error[E0198]: negative impls cannot be unsafe
  --> $DIR/deprecated-safe-trait-impl.rs:70:13
   |
LL | unsafe impl !DeprSafe2018 for T {}
   | ------      -^^^^^^^^^^^^
   | |           |
   | |           negative because of this
   | unsafe because of this

warning: use of trait `deprecated_safe::DeprSafe` without an `unsafe impl` declaration has been deprecated as it is now an unsafe trait
  --> $DIR/deprecated-safe-trait-impl.rs:13:1
   |
LL | impl DeprSafe for A {}
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated_safe)]` on by default
   = note: this trait was previously not marked unsafe, but has been marked unsafe since 1.61.0
   = note: consult the trait's documentation for information on how to avoid undefined behavior
   = note: reason

error[E0199]: implementing the trait `DeprSafeFuture` is not unsafe
  --> $DIR/deprecated-safe-trait-impl.rs:28:1
   |
LL | unsafe impl DeprSafeFuture for F {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0200]: the trait `DeprSafe2015` requires an `unsafe impl` declaration
  --> $DIR/deprecated-safe-trait-impl.rs:37:1
   |
LL | impl DeprSafe2015 for I {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: use of trait `deprecated_safe::DeprSafe2018` without an `unsafe impl` declaration has been deprecated as it is now an unsafe trait
  --> $DIR/deprecated-safe-trait-impl.rs:49:1
   |
LL | impl DeprSafe2018 for M {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this trait was previously not marked unsafe, but has been marked unsafe since 1.61.0
   = note: consult the trait's documentation for information on how to avoid undefined behavior
   = note: reason

error[E0199]: implementing the trait `DeprSafe2015Future` is not unsafe
  --> $DIR/deprecated-safe-trait-impl.rs:55:1
   |
LL | unsafe impl DeprSafe2015Future for O {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0198, E0199, E0200.
For more information about an error, try `rustc --explain E0198`.
